<resources>
    <string name="app_name">Calculadora</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="b1">1</string>
    <string name="b0">0</string>
    <string name="bC">C</string>
    <string name="bmas">+</string>
    <string name="bmenos">-</string>
    <string name="bmult">x</string>
    <string name="bdiv">/</string>
    <string name="bigual">=</string>
    <string name="bdec">.</string>
    <string name="bCE">CE</string>
    <string name="bMem">M</string>
    <string name="bMemDel">MC</string>
    <string name="bSeno">SEN</string>
    <string name="bCoseno">COS</string>
    <string name="bRaiz">Sqrt</string>

</resources>
