<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app=""
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.natalia.calculadora_di.MainActivity"
    android:background="@drawable/backcal">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvPantalla"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:elevation="0dp"
                android:background="@color/colorPrimary"
                android:textAlignment="viewEnd"
                android:textColor="@android:color/background_light"
                android:fontFamily="serif-monospace"
                android:textAllCaps="false"
                android:padding="16dp"
                android:textSize="45sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="20dp">

                <Button
                    android:text="@string/bC"
                    android:layout_width="wrap_content"
                    android:id="@+id/btborrar"
                    android:layout_weight="1"
                    tools:text="@string/bC"
                    android:layout_height="wrap_content"
                    android:onClick="borrarTodo"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:typeface="sans"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="?android:attr/colorMultiSelectHighlight" />

                <Button
                    android:text="@string/bCE"
                    android:layout_width="wrap_content"
                    android:id="@+id/btDel"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:typeface="sans"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/colorAccent"
                    android:onClick="borrar" />

                <Button
                    android:text="@string/bMem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:onClick="leeMemoria"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:text="@string/bMemDel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button2"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/colorAccent"
                    android:onClick="borraMemoria" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:id="@+id/bt7"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    tools:text="@string/b7"
                    android:text="@string/b7"
                    android:onClick="leeNum"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:typeface="sans"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <Button
                    android:text="@string/b8"
                    android:layout_width="wrap_content"
                    android:id="@+id/bt8"
                    android:layout_weight="1"
                    tools:text="@string/b8"
                    android:layout_height="wrap_content"
                    android:onClick="leeNum"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:typeface="sans"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <Button
                    android:text="@string/b9"
                    android:layout_width="wrap_content"
                    android:id="@+id/bt9"
                    tools:text="@string/b9"
                    android:layout_height="wrap_content"
                    android:onClick="leeNum"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:typeface="sans"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <Button
                    android:text="@string/bdiv"
                    android:layout_width="wrap_content"
                    android:id="@+id/btdivide"
                    android:layout_weight="1"
                    tools:text="@string/bdiv"
                    android:layout_height="wrap_content"
                    android:onClick="leeSigno"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="30sp"
                    android:typeface="sans"
                    android:textStyle="normal|bold"
                    android:textColor="@color/colorSing" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/b4"
                    android:layout_width="wrap_content"
                    android:id="@+id/bt4"
                    android:layout_weight="1"
                    tools:text="@string/b4"
                    android:layout_height="wrap_content"
                    android:onClick="leeNum"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:typeface="sans"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <Button
                    android:text="@string/b5"
                    android:layout_width="wrap_content"
                    android:id="@+id/bt5"
                    android:layout_weight="1"
                    tools:text="@string/b5"
                    android:layout_height="wrap_content"
                    android:onClick="leeNum"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:typeface="sans"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <Button
                    android:text="@string/b6"
                    android:layout_width="wrap_content"
                    android:id="@+id/bt6"
                    android:layout_weight="1"
                    tools:text="@string/b6"
                    android:layout_height="wrap_content"
                    android:onClick="leeNum"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:typeface="sans"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <Button
                    android:text="@string/bmult"
                    android:layout_width="wrap_content"
                    android:id="@+id/btmultiplica"
                    android:layout_weight="1"
                    tools:text="@string/bmult"
                    android:layout_height="wrap_content"
                    android:onClick="leeSigno"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="30sp"
                    android:typeface="sans"
                    android:textStyle="normal|bold"
                    android:textColor="@color/colorSing" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/b1"
                    android:layout_width="wrap_content"
                    android:id="@+id/bt1"
                    android:layout_weight="1"
                    tools:text="@string/b1"
                    android:layout_height="wrap_content"
                    android:onClick="leeNum"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:typeface="sans"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <Button
                    android:text="@string/b2"
                    android:layout_width="wrap_content"
                    android:id="@+id/bt2"
                    android:layout_weight="1"
                    tools:text="@string/b2"
                    android:layout_height="wrap_content"
                    android:onClick="leeNum"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:typeface="sans"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <Button
                    android:text="@string/b3"
                    android:layout_width="wrap_content"
                    android:id="@+id/bt3"
                    android:layout_weight="1"
                    tools:text="@string/b3"
                    android:layout_height="wrap_content"
                    android:onClick="leeNum"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:typeface="sans"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <Button
                    android:text="@string/bmenos"
                    android:layout_width="wrap_content"
                    android:id="@+id/btresta"
                    android:layout_weight="1"
                    tools:text="@string/bmenos"
                    android:layout_height="wrap_content"
                    android:onClick="leeSigno"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="30sp"
                    android:typeface="sans"
                    android:textStyle="normal|bold"
                    android:textColor="@color/colorSing" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/b0"
                    android:layout_width="wrap_content"
                    android:id="@+id/bt0"
                    android:layout_weight="1"
                    tools:text="@string/b0"
                    android:layout_height="wrap_content"
                    android:onClick="leeNum"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:typeface="sans"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <Button
                    android:text="@string/bdec"
                    android:layout_width="wrap_content"
                    android:id="@+id/btdecimal"
                    android:layout_weight="1"
                    tools:text="@string/bdec"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:onClick="leeNum" />

                <Button
                    android:text="@string/bigual"
                    android:layout_width="wrap_content"
                    android:id="@+id/btigual"
                    android:layout_weight="1"
                    tools:text="@string/bigual"
                    android:layout_height="wrap_content"
                    android:onClick="calcular"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textStyle="normal|bold"
                    android:textColor="@color/colorSing"
                    android:background="@color/colorBack" />

                <Button
                    android:text="@string/bmas"
                    android:layout_width="wrap_content"
                    android:id="@+id/btsuma"
                    android:layout_weight="1"
                    tools:text="@string/bmas"
                    android:layout_height="wrap_content"
                    android:onClick="leeSigno"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="30sp"
                    android:typeface="sans"
                    android:textStyle="normal|bold"
                    android:textColor="@color/colorSing" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</RelativeLayout>
